<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Go Back Icon -->
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_left"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="15dp"
        app:tint="@color/colorText"
        android:padding="8dp"
        android:contentDescription="@string/go_back" />

    <!-- Title Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="80dp" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        style="@style/TextField"
        android:layout_marginBottom="16dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        style="@style/TextField"
        android:layout_marginBottom="24dp" />

    <!-- Sign-Up msg Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" for infinity joy!"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:textSize="20sp"
        style="@style/ButtonMain"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

</LinearLayout>
