<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Profile Picture Container (AvatarCircle will be added dynamically) -->
    <LinearLayout
        android:id="@+id/avatarContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" />

    <!-- Username -->
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <!-- Email -->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_example"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="50dp"
        style="@style/ButtonMain"
        android:textStyle="bold" />
</LinearLayout>
